--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "engines": {
     "node": ">=7.6"
   },
-  "scripts": {},
+  "scripts": {
+    "test": "ava"
+  },
   "files": [
     "cli.js"
   ],
@@ -33,5 +35,9 @@
   "dependencies": {
     "lorem-picsum-wallpaper": "^1.3.0",
     "meow": "^3.7.0"
+  },
+  "devDependencies": {
+    "ava": "^0.23.0",
+    "execa": "^0.8.0"
   }
 }
